--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,13 +17,48 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+.company-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+  font-weight: 800;
+}
+.conn {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+.company-stats {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 4.1rem;
+  font-size: 0.9rem;
+}
+.stats {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.3rem;
+}
+.normalHeight {
+  max-height: 94%;
+  overflow-y: auto;
+}
+.center-item {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+
+  align-content: center;
+  max-width: 100vw;
+  width: 100%;
 }
 
 @layer utilities {
